SteveHorses OLD/Steve PRO OLD/logs/run_20250830_232047.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 255
    "<td class='right mono'>"+(f\"{100*p:.1f}%\" if p>0 else \"—\")+"</td>"
                                                                            ^
SyntaxError: unexpected character after line continuation character
